Header almost done

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <body>
 
         <header class="toboolist">
-
+            
+            <img class="logo" src="./img/logo.png" alt="Boolean Logo">
+            <span class="logo_text">Toboolist</span>
 
         </header>
         <!-- /header -->
