Header suspended, working on body

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
 
         <header class="toboolist">
-            
+
             <img class="logo" src="./img/logo.png" alt="Boolean Logo">
             <span class="logo_text">Toboolist</span>
 
@@ -20,6 +20,35 @@
 
         <main>
 
+            <div class="buttons">
+                <button id="task_button" class="management">Add Task</button>
+                <button id="section_button" class="management">Add Section</button>
+            </div>
+            <!-- /buttons -->
+
+            <div class="tasks">
+
+                <section class="new_task">
+
+
+
+                </section>
+
+                <section class="today_tasks">
+
+
+
+                </section>
+                <!-- /today_tasks -->
+
+                <section class="upcoming_tasks">
+
+
+
+                </section>
+                <!-- upcoming_tasks -->
+
+            </div>
 
         </main>
         <!-- /main -->
