--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="toboolist">
 
             <img class="logo" src="./img/logo.png" alt="Boolean Logo">
-            <span class="logo_text">Toboolist</span>
+            <h1 class="logo_text">Toboolist</h1>
 
         </header>
         <!-- /header -->
@@ -28,24 +28,38 @@
 
             <div class="tasks">
 
-                <section class="new_task">
+                <div class="new_task">
 
+                    <dl> New Task
+                        <li>
+                            Quarterly Newsletter
+                        </li>
+                    </dl>
 
+                </div>
 
-                </section>
+                <div class="today_tasks">
 
-                <section class="today_tasks">
+                    <dl> Today
+                        <li>Recruiting blog post</li>
+                        <li>Mobile app LUAunch</li>
+                        <li>Interview John H.</li>
+                        <li>Summit update to mobile storefronts</li>
+                    </dl>
 
-
-
-                </section>
+                </div>
                 <!-- /today_tasks -->
 
-                <section class="upcoming_tasks">
+                <div class="upcoming_tasks">
+                    <dl>Upcoming
+                        <li>Schedule meeting with Alex</li>
+                        <li>Homepage refresh</li>
+                        <li>onboard new Sales team members</li>
+                        <li>Review editorial calendar</li>
+                    </dl>
 
 
-
-                </section>
+                </div>
                 <!-- upcoming_tasks -->
 
             </div>
