1st Checkmark finished

--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
             </div>
             <!-- /buttons -->
 
-            <div class="tasks">
+            <div class="task_list">
 
                 <div class="new_task">
 
-                    <dl> New Task
+                    <dl class="dlist_title"> &blacktriangledown; New Task
                         <li>
-                            Quarterly Newsletter
+                            <item class="checkmark">&check;</item>
+                            <span class="list_entry">Quarterly Newsletter</span>
+                            <item class="tag editorial"></item>
                         </li>
                     </dl>
 
@@ -40,7 +42,7 @@
 
                 <div class="today_tasks">
 
-                    <dl> Today
+                    <dl class="dlist_title"> &blacktriangledown; Today
                         <li>Recruiting blog post</li>
                         <li>Mobile app LUAunch</li>
                         <li>Interview John H.</li>
@@ -51,7 +53,8 @@
                 <!-- /today_tasks -->
 
                 <div class="upcoming_tasks">
-                    <dl>Upcoming
+
+                    <dl class="dlist_title">&blacktriangledown;Upcoming
                         <li>Schedule meeting with Alex</li>
                         <li>Homepage refresh</li>
                         <li>onboard new Sales team members</li>
