First tag finished

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li>
                             <item class="checkmark">&check;</item>
                             <span class="list_entry">Quarterly Newsletter</span>
-                            <item class="tag editorial"></item>
+                            <item class="tag blue">Editorial</item>
                         </li>
                     </dl>
 
