Layout finished, working on details

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                     <dl class="dlist_title"> &blacktriangledown; New Task
                         <li>
-                            <item class="checkmark">&check;</item>
+                            <item class="check mark">&check;</item>
                             <span class="list_entry">Quarterly Newsletter</span>
                             <item class="tag blue">Editorial</item>
                         </li>
@@ -43,10 +43,26 @@
                 <div class="today_tasks">
 
                     <dl class="dlist_title"> &blacktriangledown; Today
-                        <li>Recruiting blog post</li>
-                        <li>Mobile app LUAunch</li>
-                        <li>Interview John H.</li>
-                        <li>Summit update to mobile storefronts</li>
+                        <li>
+                            <item class="check mark">&check;</item>
+                            Recruiting blog post
+                            <item class="tag blue">Editorial</item>
+                        </li>
+                        <li>
+                            <item class="check mark">&check;</item>
+                            Mobile app LUAunch
+                            <item class="tag purple">Q1 Goals</item>
+                        </li>
+                        <li>
+                            <item class="cross mark">&cross;</item>
+                            Interview John H.
+                            <item class="tag lightgreen">Recruiting</item>
+                        </li>
+                        <li>
+                            <item class="check mark">&check;</item>
+                            Summit update to mobile storefronts
+                            <item class="tag orange">Mobile</item>
+                        </li>
                     </dl>
 
                 </div>
@@ -55,10 +71,24 @@
                 <div class="upcoming_tasks">
 
                     <dl class="dlist_title">&blacktriangledown;Upcoming
-                        <li>Schedule meeting with Alex</li>
-                        <li>Homepage refresh</li>
-                        <li>onboard new Sales team members</li>
-                        <li>Review editorial calendar</li>
+                        <li>
+                            <item class="cross mark">&cross;</item>
+                            Schedule meeting with Alex</li>
+                        <li>
+                            <item class="check mark">&check;</item>
+                            Homepage refresh
+                            <item class="tag fuchsia">Website</item>
+                        </li>
+                        <li>
+                            <item class="check mark">&check;</item>
+                            Onboard new Sales team members
+                            <item class="tag mustard">Sales</item>
+                        </li>
+                        <li>
+                            <item class="check mark">&check;</item>
+                            Review editorial calendar
+                            <item class="tag blue">Editorial</item>
+                        </li>
                     </dl>
 
 
